--- a/week1/index.html
+++ b/week1/index.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>hola</h1>
-</body>
+<html lang="en-us">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>WDD 330 Assignment Portal</title>
+  </head>
+  <body>
+    <header>
+      <h1>Week 1</h1>
+    </header>
+    <main>
+      <h3>Questions:</h3>
+      <ol>
+        <li>
+          this week I had a lot of problems week my git and github
+        </li>
+      </ol>
+      <hr />
+    </main>
+    <footer>
+      <p>
+        &copy; <span id="currentyear">2021</span> |
+        <a href="../index.html">Marco Sarango</a> | Virginia |
+        <a href="https://www.byui.edu/online" target="_blank"
+          >BYUI Online Learning</a
+        >
+      </p>
+    </footer>
+  </body>
 </html>
