--- a/week1/index.html
+++ b/week1/index.html
@@ -10,10 +10,15 @@
       <h1>Week 1</h1>
     </header>
     <main>
+        <ol>
+            <li>
+                My challenge for this week <a href="/week1/challenge.html">challenge</a>
+            </li>
+        </ol>
       <h3>Questions:</h3>
       <ol>
         <li>
-          this week I had a lot of problems week my git and github
+          This week I had a lot of problems week my git and github
         </li>
       </ol>
       <hr />
