--- a/week1/index.html
+++ b/week1/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-      <h1>Week 1</h1>
+      <h1><a href="/frontend-330/index.html">Week1</a></h1>
     </header>
     <main>
         <ol>
