--- a/week2/index.html
+++ b/week2/index.html
@@ -10,7 +10,12 @@
       <h1><a href="/frontend-330/index.html">Week 2</a></h1>
     </header>
     <main>
-        
+        <h3>Challlenges</h3>
+        <ol>
+          <li>
+            this week i did these differents challlenges. <a href="/frontend-330/week2/quiz/index.html">Quiz</a>, <a href="/frontend-330/week2/rainbow/rainbow.html">rainbow</a>
+          </li>
+        </ol>
       <h3>Reading</h3>
       <ol>
           <li>
