--- a/week4/index.html
+++ b/week4/index.html
@@ -15,8 +15,7 @@
 </head>
 
 <body>
-    <h1><a href="../index.html">WDD 330 - Web Frontend Development</a></h1>
-    <h2>Week04</h2>
+    <h1><a href="../index.html">Week04</a></h1>
     <h3>Notes</h3>
     <h4>Chapter 8 (Forms)</h4>
 
