--- a/week7/index.html
+++ b/week7/index.html
@@ -141,7 +141,7 @@
     
     <li>In this function, we create a new FormData instance using the FormData() constructor function and provide the
         form as an argument. This does all the hard work of creating the task object for us.</li>
-    <h3><a href="/frontend-330/week7/team/hiking-complete.html">Team Activity - Hikes Extended</a></h3>
+    <h3><a href="/frontend-330/week7/team/hiking-complete.html">Team Activity </a></h3>
     <br>
     <br>
 </body>
