--- a/week7/team/hiking-complete.html
+++ b/week7/team/hiking-complete.html
@@ -84,6 +84,7 @@
       <section id="comments"></section>
     </main>
 
-    <script type="module" src="app7.js"></script>
+    <script type="module" src="/frontend-330/week7/team/app7.js
+    "></script>
   </body>
 </html>
